--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
