--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
     implementation "gun0912.ted:tedpermission:2.1.0"
+    implementation 'com.squareup.okhttp3:okhttp:3.4.2'
 }
