--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Single_Customer" />
-        <activity android:name=".SendInfo" />
+
+        <service
+            android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+            android:enabled="true" />
+        <activity android:name=".SendInfo"/>
 
         <service
             android:name=".MyFirebaseMessagingService"
@@ -31,6 +35,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
 
         <activity android:name=".MainActivity" />
         <activity android:name=".Login" />
